--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -126,3 +126,27 @@ services:
       - ./utils:/app/utils
       # Mount the fraud_detection/src directory in the current directory to the /app/fraud_detection/src directory in the container
       - ./order_queue/src:/app/order_queue/src
+  order_executor:
+    build:
+      # Use the current directory as the build context
+      # This allows us to access the files in the current directory inside the Dockerfile
+      context: ./
+      # Use the Dockerfile in the fraud_detection directorys
+      dockerfile: ./order_executor/Dockerfile
+    deploy:
+      replicas: 3
+    ports:
+      # Expose port 50054 on the host, and map port 50054 of the container to port 50054 on the host
+      - 50055-50057:50055
+    environment:
+      # Pass the environment variables to the container
+      # The PYTHONUNBUFFERED environment variable ensures that the output from the application is logged to the console
+      - PYTHONUNBUFFERED=TRUE
+      # The PYTHONFILE environment variable specifies the absolute entry point of the application
+      # Check app.py in the fraud_detection directory to see how this is used
+      - PYTHONFILE=/app/order_executor/src/app.py
+    volumes:
+      # Mount the utils directory in the current directory to the /app/utils directory in the container
+      - ./utils:/app/utils
+      # Mount the fraud_detection/src directory in the current directory to the /app/fraud_detection/src directory in the container
+      - ./order_executor/src:/app/order_executor/src
